role aplicador criada
